--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Website!</h1>
+        <h1>Welcome to My Website! My name is Hudson.</h1>
         <p>This is my first website built using HTML and hosted on GitHub Pages.</p>
     </header>
 
     <section>
         <h2>About Me</h2>
-        <p>Hello, I’m [Your Name]! I’m learning web development and this is my first project.</p>
+        <p>I'm awesome. I like long walks on the beach with Aussies. </p>
     </section>
 
     <section>
         <h2>My Hobbies</h2>
         <ul>
-            <li>Reading books</li>
-            <li>Playing video games</li>
-            <li>Building websites</li>
+            <li>Playing Oculus</li>
+            <li>Skiing</li>
+            <li>Eating Cookies</li>
         </ul>
     </section>
 
