--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header>
         <h1>Welcome to My Website! My name is Hudson.</h1>
         <p>This is my first website built using HTML and hosted on GitHub Pages.</p>
+        <p><img>aussie.jpg</img></p>
     </header>
 
     <section>
