--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Welcome to My Website! My name is Hudson.</h1>
         <p>This is my first website built using HTML and hosted on GitHub Pages.</p>
-        <p><image>aussies.jpeg</image></p>
+        <p><img src="aussies.jpeg" alt="My Dawg!!"></p>
     </header>
 
     <section>
