--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <header>
         <h1>Welcome to My Website! My name is Hudson.</h1>
-        <p>This is my first website built using HTML and hosted on GitHub Pages.</p>
-        <p><img src="aussies.jpeg" alt="My Dawg!!"></p>
+        <p>this website is going to teach you all about the Underground Railroad.</p>
+        <p><img src="aussies.jpeg" alt="Me</p>
     </header>
 
     <section>
@@ -32,3 +32,4 @@
     </footer>
 </body>
 </html>
+<section> when it all started.</section>
