--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Website</title>
+    <title>The underground Railroad</title></title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1>Welcome to My Website! My name is Hudson.</h1>
         <p>this website is going to teach you all about the Underground Railroad.</p>
-        <p><img src="aussies.jpeg" alt="Me</p>
+        <p><img> src="IMG_5840.jpeg" alt="Me</p>
     </header>
 
     <section>
         <h2>About Me</h2>
         <p>I'm awesome. I like long walks on the beach with Aussies. </p>
+        <p>I love skiing and I have two dawgs</p>
     </section>
 
     <section>
@@ -28,8 +29,10 @@
     </section>
 
     <footer>
-        <p>Created by [Your Name]. Visit my GitHub page: <a href="https://github.com/[YourUsername]">[Your GitHub]</a></p>
+        <p>Created by [hudthebud14]. Visit my GitHub page: <a href="https://github.com/[YourUsername]">[Your GitHub]</a></p>
     </footer>
 </body>
 </html>
-<section> when it all started.</section>
+<section> when and why slavery started.
+11,000 years ago due to the conditions created by the invention of agriculture during the Neolithic Revolution
+</section>
