--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Welcome to My Website! My name is Hudson.</h1>
         <p>this website is going to teach you all about the Underground Railroad.</p>
-        <p><img> src="IMG_5840.jpeg" alt="Me</p>
+        <p><img> src="IMG_5840.jpeg" alt="Me</img></p>
     </header>
 
     <section>
@@ -29,10 +29,11 @@
     </section>
 
     <footer>
-        <p>Created by [hudthebud14]. Visit my GitHub page: <a href="https://github.com/[YourUsername]">[Your GitHub]</a></p>
+        <p>Created by [Hudson Bennett, William Fountain, and Brandt Martell]. Visit my GitHub page: <a href="https://github.com/[hudthebud14]">[Your GitHub]</a></p>
     </footer>
 </body>
 </html>
-<section> when and why slavery started.
+<section> 
+    <h3>when and why slavery started.</h3>
 11,000 years ago due to the conditions created by the invention of agriculture during the Neolithic Revolution
 </section>
