--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Welcome to My Website! My name is Hudson.</h1>
         <p>this website is going to teach you all about the Underground Railroad.</p>
-        <p><img> src="IMG_5840.jpeg" alt="Me</img></p>
+        <p><img> src="IMG_5840.jpeg" alt="Me"</img></p>
     </header>
 
     <section>
