--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
     <header>
         <h1>Welcome to My Website! My name is Hudson.</h1>
         <p>this website is going to teach you all about the Underground Railroad.</p>
-        <p><img> src="IMG_5840.jpeg" alt="Me"</img></p>
     </header>
 
     <section>
         <h2>About Me</h2>
+        <p><img> src="IMG_5840.jpeg" alt="Me"</img></p>
         <p>I'm awesome. I like long walks on the beach with Aussies. </p>
         <p>I love skiing and I have two dawgs</p>
+        <p>Also I loooove my family.</p>
     </section>
 
     <section>
@@ -29,7 +30,7 @@
     </section>
 
     <footer>
-        <p>Created by [Hudson Bennett, William Fountain, and Brandt Martell]. Visit my GitHub page: <a href="https://github.com/[hudthebud14]">[Your GitHub]</a></p>
+        <p>Created by [Hudson Bennett, William Fountain, and Brandt Martell]. Visit my GitHub page: <a href="https://github.com/[hudthebud14]">[hudthebud14]</a></p>
     </footer>
 </body>
 </html>
