--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section>
         <h2>About Me</h2>
         <p>here is a picture of me.</p>
-        <p><img> src="IMG_5840.jpeg" alt="Me"></p>
+        <p><img src="IMG_5840.jpeg" alt="Me"></p>
         <p>I'm awesome. I like long walks on the beach with Aussies. </p>
         <p>I love skiing and I have two dawgs</p>
         <p>Also I loooove my family.</p>
