--- a/index.html
+++ b/index.html
@@ -29,10 +29,13 @@
             <li>Eating Cookies</li>
         </ul>
     </section>
+    <section>
+     <h4>what the Underground Railroad is</h4>
+        <p>The Underground Railroad was used by people who was seeking freedom from slavery in the United States, and was generally an organized network of secret routes and safe houses.</p>
+    </section>
 <section> 
     <h3>when and why slavery started.</h3>
-        11,000 years ago due to the conditions created by the invention of agriculture during the Neolithic Revolution
-    </section>
+        11,000 years ago due to the conditions created by the invention of agriculture during the Neolithic Revolution.
     <footer>
         <p>Created by [Hudson Bennett, William Fountain, and Brandt Martell]. Visit my GitHub page: <a href="https://github.com/[hudthebud14]">[hudthebud14]</a></p>
     </footer>
