--- a/index.html
+++ b/index.html
@@ -13,25 +13,31 @@
     </header>
 
     <section>
-        <h2>About Me</h2>
+        <h2>About us</h2>
         <p>here is a picture of me.</p>
-        <p><img src="IMG_5840.jpeg" width="200" height="300" alt="Me"></p>
-        <p>I'm awesome. I like long walks on the beach with Aussies. </p>
-        <p>I love skiing and I have two dawgs</p>
-        <p>Also I loooove my family.</p>
+        <p><img src= width="200" height="300" alt="us"></p>
+        <p>we are awesome. </p>
+        <p>we are kind and funny.</p>
+        <p>also we are coooool.</p>
     </section>
 
     <section>
-        <h2>My Hobbies</h2>
+        <h2>our Hobbies</h2>
         <ul>
+<p>Hudson</p>
             <li>Playing Oculus</li>
             <li>Skiing</li>
             <li>Eating Cookies</li>
+<p>william</p>
+
+
+
+<p>Brandt</p>
         </ul>
     </section>
     <section>
      <h4>what the Underground Railroad is</h4>
-        <p>The Underground Railroad was used by people who was seeking freedom from slavery in the United States, and was generally an organized network of secret routes and safe houses.</p>
+        <p>The Underground Railroad was used by people who was seeking freedom from slavery in the United States, and was generally an organized network of secret routes and safe houses. </p>
     </section>
 <section> 
     <h3>when and why slavery started.</h3>
